--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,117 @@
+######################
+# Project Specific
+######################
+/target/www/**
+######################
+# Node
+######################
+/node/**
+/node_tmp/**
+/node_modules/**
+/dist/**
+/dist-dev/**
+/src/lib/**
+/admin-src/node_modules/**
+package-lock.json
+######################
+# SASS
+######################
+.sass-cache/**
+######################
+# Eclipse
+######################
+*.pydevproject
+.project
+.metadata
+/bin/**
+/tmp/**
+/tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/**
+.loadpath
+/src/main/resources/rebel.xml
+# External tool builders
+.externalToolBuilders/**
+# Locally stored "Eclipse launch configurations"
+*.launch
+# CDT-specific
+.cproject
+# PDT-specific
+.buildpath
+######################
+# Intellij
+######################
+.idea/**
+*.iml
+*.iws
+*.ipr
+*.ids
+*.orig
+######################
+# Maven
+######################
+/log/**
+/target/**
+######################
+# Gradle
+######################
+.gradle/**
+######################
+# Package Files
+######################
+*.jar
+*.war
+*.ear
+*.db
+######################
+# Windows
+######################
+# Windows image file caches
+Thumbs.db
+# Folder config file
+Desktop.ini
+######################
+# Mac OSX
+######################
 .DS_Store
-node_modules/
-/dist/
+.svn
+# Thumbnails
+._*
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+######################
+# Directories
+######################
+/bin/**
+/spring_loaded/**
+/deploy/**
+######################
+# Logs
+######################
+*.log
+######################
+# Others
+######################
+*.class
+*.*~
+*~
+.merge_file*
+######################
+# Gradle Wrapper
+######################
+!gradle/wrapper/gradle-wrapper.jar
+######################
+# Maven Wrapper
+######################
+!.mvn/wrapper/maven-wrapper.jar
+######################
+# ESLint
+######################
+.eslintcache
